<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    tools:context=".frontend.MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/welcome_to_chess"
            android:src="@drawable/welcome" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            android:weightSum="2">

            <Button
                android:id="@+id/play"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/play"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/exit"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/exit"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_horizontal"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_marginTop="-1dp"
            android:max="100"
            android:progress="0"
            android:visibility="visible" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>